# get_papers_list

./: README.md  get_papers_list.py  pyproject.toml
cli/: __init__.py
papers_fetcher/: __init__.py  csv_writer.py  fetcher.py  filters.py  utils.py
scripts/: publish_to_pypi.sh
tests/: __init__.py  test_csv_writer.py  test_fetcher.py  test_filters.py
